force-app/main/default/objects/Evaluation_Area__c/Evaluation_Area__c.object-meta.xml
<CustomObject>
    <description>Defines evaluation areas for Competitor evaluation (Related to Opportunity)</description>
    <label>Evaluation Area</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Evaluation Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>