force-app/main/default/objects/Evaluation_Area__c/fields/Competitor_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Competitor_evaluation__c</fullName>
    <label># Competitor evaluation</label>
    <summaryForeignKey>Competitor_evaluation__c.Evaluation_Area__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>