force-app/main/default/objects/Evaluation_Area__c/fields/Evaluation_Area__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Area__c</fullName>
    <description>FOr Qlikview</description>
    <formula>Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Area</label>
    <type>Text</type>
</CustomField>