force-app/main/default/objects/Evaluation_Area__c/fields/Evaluation_Model__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Model__c</fullName>
    <description>USed to retrieve data to ClickView. Do not delete</description>
    <formula>TEXT(Opportunity__r.Evaluation_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Model</label>
    <type>Text</type>
</CustomField>