force-app/main/default/objects/Evaluation_Area__c/fields/Ex_Related_to_Frame_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Ex_Related_to_Frame_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EX_Related to Frame Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Frame agreement, Team tender</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>5 - Awarded, Closed Won</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Evaluation Areas (Related to Frame Agreement)</relationshipLabel>
    <relationshipName>Evaluation_Areas1</relationshipName>
    <type>Lookup</type>
</CustomField>