force-app/main/default/objects/Evaluation_Area__c/fields/Last_Competitor_Evaluation_Sort__c.field-meta.xml
<CustomField>
    <fullName>Last_Competitor_Evaluation_Sort__c</fullName>
    <description>Last time for sort execution, Compare tp Last Competitor Evaluation Update to check if sort is updated</description>
    <label>Last Competitor Evaluation Sort</label>
    <type>DateTime</type>
</CustomField>