force-app/main/default/objects/Evaluation_Area__c/fields/Last_Competitor_Evaluation_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Competitor_Evaluation_Update__c</fullName>
    <description>Used to indicate if Competitor evaluation ranking needs to be updated</description>
    <label>Last Competitor Evaluation Update</label>
    <type>DateTime</type>
</CustomField>