force-app/main/default/objects/Evaluation_Area__c/fields/Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Points__c</fullName>
    <description>Output data for Clickview</description>
    <formula>Opportunity__r.Max_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>