force-app/main/default/objects/Evaluation_Area__c/fields/Rank_Updated__c.field-meta.xml
<CustomField>
    <fullName>Rank_Updated__c</fullName>
    <formula>IF( Last_Competitor_Evaluation_Update__c &lt;=   Last_Competitor_Evaluation_Sort__c , 
IMAGE(&quot;https://soprasteriasc--c.visualforce.com/resource/1642601170000/OK?&quot;, &quot;OK&quot;, 30, 30),
IMAGE(&quot;https://soprasteriasc--c.visualforce.com/resource/1642601170000/NotOK?&quot;, &quot;Not OK&quot;, 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank Updated</label>
    <type>Text</type>
</CustomField>