force-app/main/default/objects/Evaluation_Area__c/fields/RelatedtoFrameAgreement__c.field-meta.xml
<CustomField>
    <fullName>RelatedtoFrameAgreement__c</fullName>
    <label>Related to Frame Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>