force-app/main/default/objects/Evaluation_Area__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Evaluation Areas</relationshipLabel>
    <relationshipName>Evaluation_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>