force-app/main/default/objects/Evaluation_Area__c/fields/Sopra_Steria_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sopra_Steria_Hourly_Rate__c</fullName>
    <label>Sopra Steria Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>