force-app/main/default/objects/Evaluation_Area__c/fields/Status_Evaluation_Area__c.field-meta.xml
<CustomField>
    <fullName>Status_Evaluation_Area__c</fullName>
    <label>Status Evaluation Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>