force-app/main/default/objects/Evaluation_Area__c/fields/Validate_Weight_CV__c.field-meta.xml
<CustomField>
    <fullName>Validate_Weight_CV__c</fullName>
    <formula>Weight_Quality_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Weight CV</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>