force-app/main/default/objects/Evaluation_Area__c/fields/Weight_Quality_Other__c.field-meta.xml
<CustomField>
    <fullName>Weight_Quality_Other__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weight Quality: Other</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>