force-app/main/default/objects/Evaluation_Area__c/fields/Win_Loss_reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_reason__c</fullName>
    <label>Win / Loss reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>