force-app/main/default/objects/Evaluation_Area__c/validationRules/Sum_of_weights_must_be_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Sum_of_weights_must_be_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR((Validate_Weight_Capacity__c +  Validate_Weight_CV__c +  Validate_Weight_Other__c +  Validate_Weight_Price__c +  Validate_Weight_Quality__c) &lt;=0.99 , (Validate_Weight_Capacity__c +  Validate_Weight_CV__c +  Validate_Weight_Other__c +  Validate_Weight_Price__c +  Validate_Weight_Quality__c) &gt;= 1.01)</errorConditionFormula>
    <errorMessage>Sum of all Weight values must be 100%</errorMessage>
</ValidationRule>